# shiwake

./: Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  main.rs
src/plugins/: go.rs  helper_process.rs  mod.rs  runtime.rs  support.rs  typescript.rs
tests/: cli.rs  go_cli.rs  scoring.rs  typescript_cli.rs
tools/go-analyzer/: go.mod  main.go
tools/typescript-analyzer/: main.js
