[package]
name = "shiwake"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "shiwake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.16"
