[package]
name = "shiwake"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Score code diffs and emit machine-readable JSON review signals"
readme = "README.md"
keywords = ["git", "diff", "review", "scoring", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "shiwake"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
globset = "0.4.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "1.0.0"

[dev-dependencies]
assert_cmd = "2.0.16"
